--- a/README.adoc
+++ b/README.adoc
@@ -10,10 +10,10 @@ AsciidocFX 匯出 PDF 的 中文 日文 韓文 字元 的顯示以及 粗體 斜
 Asciidoc FX PDF CJK Patch 是設定關於 Asciidoc FX 產出 PDF 時, 會發生 CJK 文字無法顯示 , 例如顯示成為 # 的CJK (中文 , 日文 , 韓文)的字型字體與樣式設定。避開 AsciidocFX 常見的產出 PDF 後, 中文字元沒有正常顯示的問題。如果執行完此 Asciidoc FX PDF CJK Patch，AsciidocFX 應該可以正常產生 有中文字元的 PDF。
 
 .修改前 - 中文無法正常顯示 , 出現 `＃`
-image::pdf-cjk-patch/screenshot/BeforePatch.png[]
+image:https://github.com/life888888/asciidocfx-pdf-cjk-patch/blob/main/screenshot/BeforePatch.png[]
 
 .修改後 - 中文可以正常顯示 , 粗體 , 斜體 , 斜粗體 都有了
-image::pdf-cjk-patch/screenshot/AfterPatch.png[]
+image:https://github.com/life888888/asciidocfx-pdf-cjk-patch/blob/main/screenshot/AfterPatch.png[]
 
 
 == Features
@@ -154,7 +154,7 @@ AsciidocFX
 ( KaiGenGothic**XX** , KaiGenGothic**XX**-Bold , KaiGenGothic**XX**-BoldItalic , KaiGenGothic**XX**-Italic )
 
 .PDF ->屬性->字型
-image::pdf-cjk-patch/screenshot/pdf-fonts.png[]
+image:https://github.com/life888888/asciidocfx-pdf-cjk-patch/blob/main/screenshot/pdf-fonts.png
 
 == 還原原始設定檔
 
