--- a/README.adoc
+++ b/README.adoc
@@ -16,6 +16,8 @@ endif::[]
 :numbered:
 :experimental:
 
+PLEASE USE NEW VERSION https://github.com/life888888/asciidocfx-pdf-fop-cjk-patch
+
 Display of Chinese, Japanese, and Korean characters in AsciidocFX exported PDF and automatic setting of Bold Italic Italic Bold Bold Italic.
 Asciidoc FX PDF CJK Patch is to set the font and style settings of CJK (Chinese, Japanese, Korean) that display as `#` when CJK text cannot be displayed when Asciidoc FX produces PDF. To avoid the common problem of AsciidocFX outputting PDF, Chinese characters are not displayed normally. After executing this Asciidoc FX PDF CJK Patch, AsciidocFX should be able to generate PDFs with Chinese characters normally. 
 
